--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-session": "^2.1.1",
     "express": "^5.1.0",
+    "mongoose": "^8.18.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   },
