add handling payments

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cookie-session": "^2.1.1",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.34.0",
