--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.28.4",
     "@eslint/js": "^9.34.0",
+    "ajv": "^8.17.1",
     "eslint": "^9.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "globals": "^16.3.0"
